test/indexOutOfBounds5.slq
// args: --run

def main(){
	x:=[1,2,3];
	(x[3],x[0])=(x[0],x[3]); // error
}
